# Quick.AI

./: .gitignore  .gitmodules  README.md  build.sh  factory.h  install_android.sh  main.cpp  meson.build  meson_options.txt
api/: meson.build  model_config.cpp  quick_dot_ai_api.cpp  quick_dot_ai_api.h
api-app/: meson.build  test_api.cpp
api-app/jni/: Android.mk  Application.mk
api/jni/: Android.mk
cross/: android-aarch64.cross.in
docs/: how-to-install-qnn.md
jni/: Android.mk
layers/: causallm_common_properties.h  embedding_layer.cpp  embedding_layer.h  embedding_normalize_layer.h  embedding_pooling_layer.cpp  meson.build  mha_core.cpp  rms_norm.h  tie_word_embedding.cpp  tie_word_embedding.h
models/: causal_lm.cpp  causal_lm.h  meson.build  transformer.cpp  transformer.h
models/gemma3/: gemma3_causallm.cpp  meson.build
models/gpt_oss/: gptoss_causallm.h
models/gpt_oss_cached_slim/: gptoss_cached_slim_causallm.h
models/qwen2/: qwen2_embedding.h
models/qwen3/: qwen3_causallm.h
models/qwen3_moe/: qwen3_moe_causallm.h
nntrainer/: README.md  meson.build
nntrainer/Applications/Android/PicoGPTJNI/app/src/main/jni/: picogpt.cpp
nntrainer/Applications/CausalLM/: build_test_app.sh
nntrainer/Applications/CausalLM/layers/: mha_core.h  reshaped_rms_norm.h
nntrainer/Applications/CausalLM/models/: transformer.h
nntrainer/Applications/CausalLM/models/qwen3_cached_slim_moe/: qwen3_cached_slim_moe_causallm.h
nntrainer/Applications/CausalLM/models/qwen3_slim_moe/: qwen3_slim_moe_causallm.h
nntrainer/Applications/LLaMA/jni/: main.cpp
nntrainer/Applications/MNIST/jni/: main.cpp
nntrainer/Applications/MixedPrecision/jni/: main.cpp
nntrainer/Applications/Multi_input/jni/: main.cpp
nntrainer/Applications/PicoGPT/jni/: main.cpp
nntrainer/Applications/ProductRatings/jni/: main.cpp
nntrainer/Applications/QuickAI/QuickDotAI/: README_QNN.md  build.gradle.kts
nntrainer/Applications/QuickAI/QuickDotAI/src/main/cpp/include/: quick_dot_ai_api.h
nntrainer/Applications/QuickAI/QuickDotAI/src/main/java/com/example/quickdotai/: NativeCausalLm.kt  NativeQuickDotAI.kt  Types.kt
nntrainer/Applications/QuickAI/SampleTestAPP/src/main/java/com/example/sampletestapp/: MainActivity.kt
nntrainer/Applications/Resnet/jni/: main.cpp
nntrainer/Applications/SimpleFC/jni/: main.cpp
nntrainer/Applications/YOLOv2/jni/: main.cpp
nntrainer/Applications/YOLOv3/jni/: main.cpp
nntrainer/api/: nntrainer-api-common.h
nntrainer/api/ccapi/include/: layer.h  tensor_api.h
nntrainer/api/ccapi/src/: tensor_api.cpp
nntrainer/jni/: meson.build
nntrainer/nntrainer/: app_context.cpp  context.cpp  context.h  engine.cpp  engine.h  meson.build
nntrainer/nntrainer/layers/: channel_shuffle.cpp  concat_layer.cpp  conv2d_layer.cpp  conv2d_transpose_layer.cpp  gather_layer.cpp  gather_layer.h  layer_devel.cpp  layer_devel.h  layer_node.cpp  lstm.cpp  meson.build  multi_head_attention_layer.cpp  multi_head_attention_layer.h  multiply_layer.cpp  pooling2d_layer.cpp  slice_layer.cpp
nntrainer/nntrainer/layers/cl_layers/: concat_cl.cpp
nntrainer/nntrainer/tensor/: cache_elem.h  cache_loader.cpp  cache_loader.h  half_tensor.cpp  lazy_tensor.cpp  lazy_tensor.h  manager.cpp  manager.h  task.h  task_executor.cpp  task_executor.h  tensor_base.cpp  tensor_base.h  tensor_pool.cpp  tensor_pool.h
nntrainer/nntrainer/tensor/cpu_backend/ggml_interface/: ggml_interface_bs_threadpool.cpp  ggml_interface_fp16.cpp  ggml_interface_mixed.cpp  ggml_interface_omp.cpp
nntrainer/nntrainer/tensor/cpu_backend/ggml_interface/nntr_ggml_impl/: nntr_ggml_impl_fp16_fp32.cpp  nntr_ggml_impl_utils.h
nntrainer/nntrainer/utils/: bs_thread_pool_manager.cpp  bs_thread_pool_manager.hpp  nntr_threads.cpp  nntr_threads.h
nntrainer/test/ccapi/: unittest_ccapi_tensor.cpp
nntrainer/test/unittest/: unittest_nntrainer_lazy_tensor.cpp  unittest_nntrainer_tensor_pool.cpp
nntrainer/test/unittest/layers/: unittest_layers_multi_head_attention.cpp
nntrainer/test/unittest/memory/: unittest_cache_loader.cpp
qnn/: README.md  meson.build  qnn_context.cpp  qnn_context.h
qnn/jni/: Android.mk.in  iotensor_wrapper.hpp  qnn_rpc_manager.cpp
qnn/jni/qnn/: qnn_properties.cpp
qnn/jni/qnn-api/: BackendExtensions.cpp
qnn/jni/qnn/Log/: LogUtils.cpp  Logger.cpp  meson.build
qnn/jni/qnn/PAL/: meson.build
qnn/jni/qnn/PAL/src/common/: GetOpt.cpp  StringOp.cpp
qnn/jni/qnn/PAL/src/linux/: Directory.cpp  DynamicLoading.cpp  FileOp.cpp  Path.cpp
qnn/jni/qnn/QNN/: meson.build
qnn/jni/qnn/QNN/GPU.unused/: meson.build
qnn/jni/qnn/QNN/HTP/: meson.build
qnn/jni/qnn/QNN/System/: meson.build
qnn/jni/qnn/Utils/: DataUtil.cpp  DynamicLoadUtil.cpp  IOTensor.cpp  QnnSampleAppUtils.cpp  meson.build
qnn/jni/qnn/WrapperUtils/: QnnWrapperUtils.cpp  meson.build
qnn/jni/qnn/op/: QNNGraph.cpp  QNNGraph.h  QNNLinear.cpp  meson.build
src/: meson.build  meson_options.txt
src/jni/: Android.mk
src/models/: meson.build
src/models/llm-qnn-test/: android_memory_allocator.cpp  android_memory_allocator.h  generate_qnn_utils.cpp  generate_qnn_utils.h  llm_qnn_test.cpp  llm_qnn_test.h  meson.build  quick_dot_ai_qnn.cpp  quick_dot_ai_qnn.h
