llm_qnn_test_src = [
    meson.current_source_dir() / 'quick_dot_ai_qnn.cpp',
    meson.current_source_dir() / 'llm_qnn_test.cpp',
    meson.current_source_dir() / 'generate_qnn_utils.cpp',
    meson.current_source_dir() / 'android_memory_allocator.cpp',    
]

llm_qnn_test_inc = include_directories(
    '.'
)

quick_dot_ai_src += llm_qnn_test_src
quick_dot_ai_inc += llm_qnn_test_inc
